# pyc-AI-chu

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile-api  Makefile  pokemons_selector.csv  pyproject.toml  requirements.txt
api/: fast.py
src/: agenticdresseur.py  main.py  poke-agent.ipynb  q_network.py  registry.py  rldresseur.py  team_selector.py
src/models/: q_network.py
src/notebook/: Scrapping.py  agentic-dresseur.ipynb  detailed_poke_turns.py  gen9ou-2437419661.csv  poke_coach_streamline_app.py  pokemon_scrap.py  rl-dresseur-ray-rllib.ipynb  rl-dresseur-torch-basic.ipynb  rl-dresseur.ipynb  run_scrapping_battles.py  scrapping_battles.py  scrapping_battles_poke.py  team_selector.py  test.ipynb  test_ranking_pokemons.ipynb
src/utils/: params.py  registry.py
webapps/: app.py
